--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,5 @@
-﻿blinker==1.9.0
-cffi==1.17.1
-click==8.1.8
-colorama==0.4.6
-cryptography==44.0.2
-Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.1.1
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-packaging==24.2
-pycparser==2.22
+﻿gunicorn==23.0.0
 PyMySQL==1.1.1
-SQLAlchemy==2.0.39
-typing_extensions==4.13.0
-Werkzeug==3.1.3
 pandas
 numpy
 scikit-learn
