--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "app.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "app.py" }
-    ]
-  }
+  "functions": {
+    "api/*.py": {
+      "runtime": "edge"
+    }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/app.py" }
+  ]
+}
+
   
