--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,19 @@
 {
-  "functions": {
-    "api/*.py": {
-      "runtime": "edge"
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.9" }
     }
-  },
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/api/app.py" }
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
   ]
 }
+
 
   
