--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
 services:
   - type: web
-    name: sales-analysis-api
+    name: sales-analysis-flask
     env: python
-    region: oregon
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
-    plan: free
-    branch: main
-    autoDeploy: true
+    startCommand: "python app.py"
+    envVars: []
