Initial commit with Flask API for Render

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,11 @@
 services:
   - type: web
-    name: sales-analysis-flask
+    name: sales-analysis-api
     env: python
+    plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python app.py"
-    envVars: []
+    envVars:
+      - key: PORT
+        value: 10000
+
