--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,8 @@
 services:
   - type: web
-    name: sales-analysis-api
+    name: sales-analysis-flask
     env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
-    envVars:
-      - key: PORT
-        value: 10000
+    buildCommand: ""
+    startCommand: python app.py
+    autoDeploy: true
 
